Bug 299844 - using a shape tool creates new shape layer even if shape layer selected
Summary: using a shape tool creates new shape layer even if shape layer selected
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filter Layers (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 301213 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-11 21:41 UTC by Nabil Stendardo
Modified: 2013-07-02 13:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nabil Stendardo 2012-05-11 21:41:40 UTC
Each time I use a shape tool (such as a rectangle), it creates a new shape layer instead of adding it to the current active shape layer. And since two shape layers cannot be merged into a shape layer (it rasterizes the layers in question), this makes it an annoying bug indeed.

Reproducible: Always

Steps to Reproduce:
1. Create a new document
2. Create a shape layer
3. Have that shape layer selected
4. Select the rectangle tool
5. Draw a rectangle
Actual Results:  
A new shape layer is created with the rectangle in it.

Expected Results:  
It should add the results to an existing shape layer.

I use Ubuntu 12.04 AMD64 and my version of Krita comes from ubuntu repositories.
Comment 1 Halla Rempt 2012-05-12 07:03:09 UTC
Hi Nabil,

Thanks for your report. I can confirm the bug. The strange thing is, dragging a shape from the add shape palette doesn't create a new shape layer...
Comment 2 Halla Rempt 2012-06-05 12:11:10 UTC
*** Bug 301213 has been marked as a duplicate of this bug. ***
Comment 3 Michael O'Sullivan 2012-07-03 18:52:16 UTC
Following some experimentation using current git master:

In addition to dragging from the shape palette, the "draw a path" and the "draw straight line with current brush" tools behave as expected---i.e. add to an existing vector layer rather than creating a new one. Also, copying and then pasting an existing shape within a layer behaves as expected.
Comment 4 Sven Langkamp 2012-07-19 12:44:32 UTC
Git commit d422b5e7331a4a592a68af06e151ad198fff4664 by Sven Langkamp.
Committed on 19/07/2012 at 14:40.
Pushed by langkamp into branch 'master'.

fix inserting of shapes on shape layer with some tools, systemLock was set incorretly

patch by Michael O'Sullivan
REVIEW:105618

M  +1    -0    krita/plugins/tools/defaulttools/kis_tool_ellipse.cc
M  +1    -1    krita/plugins/tools/defaulttools/kis_tool_rectangle.cc
M  +2    -0    krita/plugins/tools/selectiontools/kis_tool_select_elliptical.cc
M  +4    -1    krita/plugins/tools/selectiontools/kis_tool_select_polygonal.cc
M  +3    -0    krita/plugins/tools/tool_polygon/kis_tool_polygon.cc
M  +3    -0    krita/plugins/tools/tool_polyline/kis_tool_polyline.cc
M  +0    -2    krita/ui/tool/kis_tool_ellipse_base.cpp
M  +0    -2    krita/ui/tool/kis_tool_polyline_base.cpp

http://commits.kde.org/calligra/d422b5e7331a4a592a68af06e151ad198fff4664
Comment 5 Nabil Stendardo 2012-11-14 16:37:55 UTC
No it's not fixed. The fix is committed only to the 'master' branch, which means that unless the user wants bleeding-edge code, he does not benefit from the fix. Please backport it.
Comment 6 Halla Rempt 2013-07-02 13:16:12 UTC
This is by now in Krita 2.6 which is generally available.