fix inserting of shapes on shape layer with some tools, systemLock was set incorretly

patch by Michael O'Sullivan

BUG:299844
REVIEW:105618