krita/plugins/tools/selectiontools/kis_tool_select_polygonal.cc
@@ -33,6 +33,8 @@
 #include "kis_selection_tool_helper.h"
 #include "kis_shape_tool_helper.h"
 
+#include "kis_system_locker.h"
+
 
 KisToolSelectPolygonal::KisToolSelectPolygonal(KoCanvasBase *canvas)
     : KisToolPolylineBase(canvas, KisToolPolylineBase::SELECT,
@@ -60,6 +62,7 @@ void KisToolSelectPolygonal::keyPressEvent(QKeyEvent *event)
 
 void KisToolSelectPolygonal::finishPolyline(const QVector<QPointF> &points)
 {
+    KisSystemLocker locker(currentNode());
     KisCanvas2 * kisCanvas = dynamic_cast<KisCanvas2*>(canvas());
     Q_ASSERT(kisCanvas);
     if (!kisCanvas)
