krita/ui/tool/kis_tool_polyline_base.cpp
@@ -26,7 +26,6 @@
 #include <KoCanvasController.h>
 #include <KoViewConverter.h>
 
-#include <kis_system_locker.h>
 #include "kis_tool_polyline_base.h"
 
 #define PREVIEW_LINE_WIDTH 1
@@ -172,7 +171,6 @@ void KisToolPolylineBase::finish()
     if (!currentNode())
         return;
 
-    KisSystemLocker locker(currentNode());
     m_dragging = false;
     updateArea();
     if(m_points.count() > 1) {
